--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.5.3
   intl: ^0.20.2
   permission_handler: ^12.0.0+1
+  data_table_2: ^2.6.0
 
 dev_dependencies:
   flutter_test:
