--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.20.2
   permission_handler: ^12.0.0+1
   data_table_2: ^2.6.0
+  expansion_tile_group: ^2.3.0
 
 dev_dependencies:
   flutter_test:
