--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   permission_handler: ^12.0.0+1
   data_table_2: ^2.6.0
   expansion_tile_group: ^2.3.0
+  zo_animated_border: ^0.0.9
+  webview_flutter: ^4.13.0
   syncfusion_flutter_pdfviewer: ^29.1.38
 
 dev_dependencies:
