--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   zo_animated_border: ^0.0.9
   webview_flutter: ^4.13.0
   syncfusion_flutter_pdfviewer: ^29.1.38
+  dio: ^5.8.0+1
+  path_provider: ^2.1.5
+  pdf_render: ^1.4.12
 
 dev_dependencies:
   flutter_test:
