--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   dio: ^5.8.0+1
   path_provider: ^2.1.5
   pdf_render: ^1.4.12
+  flutter_windowmanager_plus: ^1.0.1
 
 dev_dependencies:
   flutter_test:
