--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   path_provider: ^2.1.5
   pdf_render: ^1.4.12
   flutter_windowmanager_plus: ^1.0.1
+  contextmenu: ^3.0.0
 
 dev_dependencies:
   flutter_test:
