--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   pdf_render: ^1.4.12
   flutter_windowmanager_plus: ^1.0.1
   contextmenu: ^3.0.0
+  fl_chart: ^0.71.0
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
