--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,12 @@ dependencies:
   contextmenu: ^3.0.0
   fl_chart: ^0.71.0
   carousel_slider: ^5.1.1
+  file_picker: ^10.2.1
+  url_launcher: ^6.3.2
+  awesome_notifications: ^0.10.1
+  firebase_core: ^4.0.0
+  firebase_messaging: ^16.0.0
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_test:
