--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
-        android:label="Senthil"
+        android:label="Senthil School"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
