--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_messaging: ^16.0.0
   connectivity_plus: ^6.1.4
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
