thank you screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   firebase_messaging: ^16.0.0
   connectivity_plus: ^6.1.4
   flutter_rating_bar: ^4.0.1
+  animate_do: ^4.2.0
+  flutter_confetti: ^0.5.1
 
 dev_dependencies:
   flutter_test:
