--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   animate_do: ^4.2.0
   flutter_confetti: ^0.5.1
+  internet_connection_checker_plus: ^2.7.2
 
 dev_dependencies:
   flutter_test:
